Fixed some minor display issues
The following fixes were done:

* Long package names broke out of the box; changed this to show ellipses if the name was too long
* Tag descriptions escaped the HTML output; changed this to allow formatting in tags

--- a/css/template.css
+++ b/css/template.css
@@ -83,6 +83,10 @@ a.brand, h2, .hero-unit h1
     background: white;
 }
 
+.dropdown-menu a{
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 h2
 {
     border-bottom:  1px dashed #55A72F;
